--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "express": "~4.16.1",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
+    "newrelic": "^6.4.0",
     "pusher": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^3.7.x",
-    "@types/node": "^13.7.0"
+    "@types/node": "^13.7.0",
+    "typescript": "^3.7.x"
   }
 }
