--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "build-ts": "tsc",
+    "start": "node ./dist/app.js",
+    "build": "tsc",
     "postinstall": "npm run build-ts"
   },
   "dependencies": {
@@ -19,7 +19,7 @@
     "pusher": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^13.7.0",
+    "@types/node": "^13.11.1",
     "typescript": "^3.7.x"
   }
 }
