--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./dist/app.js",
     "build": "tsc",
-    "postinstall": "npm run build-ts"
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@pusher/chatkit-server": "^2.4.0",
@@ -15,7 +15,6 @@
     "express": "~4.16.1",
     "lodash": "^4.17.15",
     "morgan": "~1.9.1",
-    "newrelic": "^6.4.0",
     "pusher": "^3.0.0"
   },
   "devDependencies": {
